# cocoindex

./: .pre-commit-config.yaml
dev/: generate_cli_docs.py
docs/docs/core/: cli-commands.md
docs/docs/examples/examples/: hackernews_trending_topics.md
python/cocoindex/_internal/: serde.py
python/cocoindex/connectors/lancedb/: _target.py
python/tests/connectors/: test_lancedb_target.py
python/tests/core/: test_component_submit_order.py
rust/core/: Cargo.toml
rust/core/src/engine/: component.rs  environment.rs  execution.rs  id_sequencer.rs  live_component.rs  target_state.rs
rust/core/src/state_store/: mod.rs  storage.rs
rust/py/src/: target_state.rs
rust/sdk/cocoindex/src/: profile.rs
